# property-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: classified_listings.csv
notebooks/: data_exploration.py  evaluation.py  exploration.py
notebooks/__marimo__/session/: exploration.py.json
src/: classifier.py  config.py  file_io.py  main.py  models.py  preprocessing.py  prompts.py
tests/: test_classifier.py  test_preprocessing.py
