[project]
name = "property-classifier"
version = "0.1.0"
description = "LLM-powered commercial property classifier"
requires-python = ">=3.12"

dependencies = [
    "openai>=1.40.0",
    "polars>=1.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "marimo>=0.14.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]